frontend/tests/cases/positive/graded/example.gr
-- doubling function

dub : Int [2]  → Int
dub [x] = x + x

trip : Int [3] → Int
trip [x] = x + x + x

twice : ∀ {c : Nat} . (Int [c] → Int) [2] → Int [2 * c] → Int
twice [g] [x] = g [x] + g [x]

main : Int
main = twice [dub] [2] + twice [trip] [1]
