frontend/tests/cases/negative/flatten/flattenNat.gr
flattenNat : ∀ { m : Nat, n : Nat } . (Int [m]) [n] → Int [m + n]
flattenNat [[x]] = [x]
